Activate polyfill for <h> tests

--- a/tests/headings/h.html
+++ b/tests/headings/h.html
@@ -12,4 +12,8 @@
 		<p>A section tag is used to define chapters, headers, footers, or any other sections of a document.</p>
 	</section>
 	<script src="//codepen.io/jonneal/pen/dbe5152771a12bd9bcc4b6b3d8e4d029.js"></script>
+	<script>
+	hfill.observe(document, 'h');
+	hfill.style(document, 'h', ['2em', '1.5em', '1.17em', '1em']);
+	</script>
 </body>
