Correct Tequila h example

--- a/tests/sections--tequila/h.html
+++ b/tests/sections--tequila/h.html
@@ -5,30 +5,30 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<body>
-		<h1>Tequila</h1>
+		<h>Tequila</h>
 		<p>Tequila... makes me happy!</p>
 
 		<main>
-			<h1>Types of tequila</h1>
+			<h>Types of tequila</h>
 			<p>There are different types of tequila. Each is made in a different way, often with different ingredients, and each has its own distinct characteristics.</p>
 
 			<section>
-				<h1>Blanco tequila</h1>
+				<h>Blanco tequila</h>
 				<p>Blanco tequila (sometimes known as White Platinum tequila) is the purest form of the Blue Agave spirit. It is clear and unaged, and can be bottled immediately after distillation.</p>
 			</section>
 
 			<section>
-				<h1>Joven tequila</h1>
+				<h>Joven tequila</h>
 				<p>Joven tequila (sometimes called Gold tequila), is a "mixto". This means that flavouring and colourants are added to it before it's bottled, making it a less pure and therefore less expensive form of the drink.</p>
 
 				<section>
-					<h1>Pure Gold tequila</h1>
+					<h>Pure Gold tequila</h>
 					<p>Gold tequila is sometimes created by blending Blanco and Reposado tequilas. When this is the case, the tequila keeps its 100% pure agave classification.</p>
 				</section>
 			</section>
 
 			<section>
-				<h1>Reposado tequila</h1>
+				<h>Reposado tequila</h>
 				<p>Reposado tequila is aged in wooden barrels for between two and eleven months. This gives the tequila a smooth texture, and gives it a golden hue in the bottle.</p>
 			</section>
 		</main>
